testdata/baselines/reference/submodule/compiler/unusedTypeParameterInMethod5.errors.txt
unusedTypeParameterInMethod5.ts(2,26): error TS6196: 'X' is declared but never used.


==== unusedTypeParameterInMethod5.ts (1 errors) ====
    class A {
        public f1 = function<X>() {
                             ~
!!! error TS6196: 'X' is declared but never used.
    
        }
    }